Tweaked formatting of lemon meringue instructions

--- a/recipes/lemon-meringue.html
+++ b/recipes/lemon-meringue.html
@@ -30,41 +30,43 @@
                     <li>½ teaspoon vanilla extract</li>
                 </ul>
             <h2>Instructions</h2>
-                <ol>
-                    <li>Preheat the oven to 375°F.</li>
-                    <h3>Pre-bake the pie shell</h3>
-                    <li><p>If you are using a packaged frozen pie crust, follow the directions on the package to pre-bake. If you are using a homemade crust, follow these instructions:</p>
-                        <p>Line your frozen pie shell with aluminum foil so that the foil extends over the edges (will make convenient handles). Fill two-thirds of the way with pie weights or dry beans.</p>
-                        <p>Bake for 20 minutes. Then remove the foil and the pie weights. Poke the bottom of the crust in several places with the tines of a fork. This will help prevent the bottom from bubbling up.</p>
-                        <p>Put the crust back in the oven and bake for 15 minutes more, or until the crust is lightly browned. Remove from oven and set aside.</p></li>
-                    <li><p>Make the lemon filling:</p>
-                        <p>Whisk the egg yolks in a medium bowl and set aside.</p>
-                        <p>In a medium saucepan, add 6 tablespoons cornstarch, 1 ⅓ cup sugar, ¼ teaspoon salt, and 1 ½ cups water, and whisk to combine. Bring to a boil on medium heat, whisking constantly. Let simmer for a minute or two until the mixture begins to thicken.</p>
-                        <p>Once the cornstarch mixture has thickened up well (consistency of Cream of Wheat) remove from heat. Take a spoonful of the cornstarch mixture and whisk it into the beaten egg yolks to temper the yolks. Continue to whisk in spoonfuls of the cornstarch mixture until you've used about half of the cornstarch mixture.</p>
-                        <p>Then add the egg yolk mixture back to the pot with the cornstarch. Return to a boil, on medium to medium high heat, stirring constantly. Cook 3 to 4 minutes. (The starch will keep the eggs from curdling.)</p>
-                        <p>Remove from heat and stir in the lemon juice, lemon zest, and butter.</p></li>
-                    <li><p>Reduce the oven temperature:</p>
-                        <p>Turn the oven temperature down to 325°F.</p></li>
-                    <li><p>Prepare the cornstarch mixture for the meringue:</p>
-                        <p>In a small saucepan, whisk together 1 tablespoon cornstarch and 1/3 cup of cold water until the cornstarch dissolves. Heat on medium heat and whisk until the mixture bubbles and thickens. Remove from heat and set aside.</p></li>
-                    <li><p>Whisk together the sugar and cream of tartar:</p>
-                        <p>Whisk together 1/2 cup plus 2 tablespoons of sugar and 1/4 teaspoon of cream of tartar, set aside. (If you do not have cream of tartar, instead add a teaspoon of white vinegar to the egg whites with the vanilla in the next step.)</p></li>
-                    <li><p>Make the meringue:</p>
-                        <p>Place egg whites and 1/2 teaspoon vanilla extract in the bowl of your mixer. Start beating the egg whites on low speed and gradually increase the speed to medium.</p>
-                        <p>Once the egg whites are frothy, slowly add in the sugar and cream of tartar, a spoonful at a time. Beat until the egg whites form soft peaks.</p>
-                        <p>Add the cornstarch water mixture (it should look like a gel) a spoonful at a time, as you continue to beat the egg whites. Increase the speed to high and continue to beat until the egg whites have formed stiff peaks. Do not over-beat, or your meringue will be grainy.</p></li>
-                    <li><p>Re-heat the filling and pour it into the pie shell:</p>
-                        <p>Heat the lemon filling again, until it is bubbling hot. It's important that the filling is very hot in order for the meringue to properly adhere.</p>
-                        <p>Scoop the steaming hot filling into the pre-baked pie shell, spreading it evenly.</p></li>
-                    <li><p>Top the filling with meringue:</p>
-                        <p>Working quickly, use a rubber spatula to spread the meringue mixture evenly around the edge of the pie.</p>
-                        <p>Make sure the mixture attaches to the crust with no gaps. The crust will help anchor the meringue and help keep it from shrinking and weeping.</p>
-                        <p>Fill in the center with more meringue mixture. Use the back of a spoon to create peaks all over the meringue.</p></li>
-                    <li><p>Bake the pie, then cool completely:</p>
-                        <p>Bake the pie for 20 minutes at 325°F, until the meringue is golden brown.</p>
-                        <p>Transfer to a wire rack and let cool completely to room temperature. If the pie is even remotely warm when you cut into it, the lemon base may be runny. To help firm up the base, after the pie has cooled down, you can place the pie on top of a cooling pack covered with a tea towel.</p>
-                        <p>This pie is best eaten the same day you make it.</p></li>
-                </ol>
+                <h3>Pre-bake the pie shell</h3>
+                    <ol>
+                        <li>Preheat the oven to 375°F.</li>
+                        <li>If you are using a packaged frozen pie crust, follow the directions on the package to pre-bake. If you are using a homemade crust, follow these instructions:</li>
+                        <li>Line your frozen pie shell with aluminum foil so that the foil extends over the edges (will make convenient handles). Fill two-thirds of the way with pie weights or dry beans.</li>
+                        <li>Bake for 20 minutes. Then remove the foil and the pie weights. Poke the bottom of the crust in several places with the tines of a fork. This will help prevent the bottom from bubbling up.</li>
+                        <li>Put the crust back in the oven and bake for 15 minutes more, or until the crust is lightly browned. Remove from oven and set aside.</li>
+                    </ol>
+                <h3>Make the lemon filling:</h3>
+                    <ol>
+                        <li>Whisk the egg yolks in a medium bowl and set aside.</li>
+                        <li>In a medium saucepan, add 6 tablespoons cornstarch, 1 ⅓ cup sugar, ¼ teaspoon salt, and 1 ½ cups water, and whisk to combine. Bring to a boil on medium heat, whisking constantly. Let simmer for a minute or two until the mixture begins to thicken.</li>
+                        <li>Once the cornstarch mixture has thickened up well (consistency of Cream of Wheat) remove from heat. Take a spoonful of the cornstarch mixture and whisk it into the beaten egg yolks to temper the yolks. Continue to whisk in spoonfuls of the cornstarch mixture until you've used about half of the cornstarch mixture.</li>
+                        <li>Then add the egg yolk mixture back to the pot with the cornstarch. Return to a boil, on medium to medium high heat, stirring constantly. Cook 3 to 4 minutes. (The starch will keep the eggs from curdling.)</li>
+                        <li>Remove from heat and stir in the lemon juice, lemon zest, and butter.</li></>
+                    </ol>
+                <h3>Make the meringue:</h3>
+                    <ol>
+                        <li>Turn the oven temperature down to 325°F.</li>
+                        <li>In a small saucepan, whisk together 1 tablespoon cornstarch and 1/3 cup of cold water until the cornstarch dissolves. Heat on medium heat and whisk until the mixture bubbles and thickens. Remove from heat and set aside.</li>
+                        <li>Whisk together 1/2 cup plus 2 tablespoons of sugar and 1/4 teaspoon of cream of tartar, set aside. (If you do not have cream of tartar, instead add a teaspoon of white vinegar to the egg whites with the vanilla in the next step.)</li>
+                        <li>Place egg whites and 1/2 teaspoon vanilla extract in the bowl of your mixer. Start beating the egg whites on low speed and gradually increase the speed to medium.</li>
+                        <li>Once the egg whites are frothy, slowly add in the sugar and cream of tartar, a spoonful at a time. Beat until the egg whites form soft peaks.</li>
+                        <li>Add the cornstarch water mixture (it should look like a gel) a spoonful at a time, as you continue to beat the egg whites. Increase the speed to high and continue to beat until the egg whites have formed stiff peaks. Do not over-beat, or your meringue will be grainy.</li>
+                    </ol>
+                    
+                <h3>Putting it all together</h3>
+                    <ol>
+                        <li>Heat the lemon filling again, until it is bubbling hot. It's important that the filling is very hot in order for the meringue to properly adhere.</li>
+                        <li>Scoop the steaming hot filling into the pre-baked pie shell, spreading it evenly.</li>
+                        <li>Working quickly, use a rubber spatula to spread the meringue mixture evenly around the edge of the pie.</li>
+                        <li>Make sure the mixture attaches to the crust with no gaps. The crust will help anchor the meringue and help keep it from shrinking and weeping.</li>
+                        <li>Fill in the center with more meringue mixture. Use the back of a spoon to create peaks all over the meringue.</li>
+                        <li>Bake the pie for 20 minutes at 325°F, until the meringue is golden brown.</li>
+                        <li>Transfer to a wire rack and let cool completely to room temperature. If the pie is even remotely warm when you cut into it, the lemon base may be runny. To help firm up the base, after the pie has cooled down, you can place the pie on top of a cooling pack covered with a tea towel.</li>
+                    </ol>
+
     <a href="../index.html">Back to home</a>
     </body>
 </html>
