Completed cheesy bread recipe. Modified links so that they open in new tabs and are noopener/noreferrer. Modified description of simple pie to be more grammatically correct.

--- a/recipes/blaze-simple-pie.html
+++ b/recipes/blaze-simple-pie.html
@@ -7,10 +7,11 @@
 
     <body>
         <h1>The <em>Glorious</em> Simple Pie from Blaze Pizza</h1>
+        <p><a href="../index.html">Back to home</a></p>
         <img src="https://olo-images-live.imgix.net/a1/a1f8baed6d784d26b87051bf6203161e.jpg?auto=format%2Ccompress&q=60&cs=tinysrgb&w=1200&h=800&fit=fill&fm=png32&bg=transparent&s=3e7b8b1bb07ee6c9a8a99452e1a4e1dd" alt="The simple pie!" height="500" width="800">
             <h2>Description</h2>
-                <p>If you're like me, if I asked you "where would you go to grab a bite right this very second", there would be one restaurant that <strong>IMMEDIATELY</strong> comes to mind. For me, that would be none other than the magnificent Blaze Pizza.</p>
-                <p>It started 2 years ago, when I found myself wanting an hour a week to relax, escape the busy thoughts of the day and eat the one thing I couldn't live without: pizza. With that being said, however, not all pizza is made the same, and that can especially be said about Blaze's perfection of a simple pie. Every Thursday since then, I have made the routine trek to this pinnacle of pie production.</p>
+                <p>If you're like me, when asked "Where would you go to grab a bite right this very second?", there would be one restaurant that <strong>IMMEDIATELY</strong> comes to mind. For me, that would be none other than the magnificent Blaze Pizza.</p>
+                <p>It started 2 years ago, when I found myself wanting an hour a week to relax, escape the busy thoughts of the day and eat the one thing I couldn't live without: pizza. With that being said, however, not all pizzas are made the same, and that can especially be said about Blaze's perfection of a simple pie. Every Thursday since then, I have made the routine trek to this pinnacle of pie production.</p>
                 <p> Some of you may not be so lucky to have a Blaze Pizza near you, but fear not! I have the solution... a simple pie within the comforts of your own oven!</p>
             <h2>Ingredients</h2>
                 <ul>
