--- a/recipes/cheesy-bread.html
+++ b/recipes/cheesy-bread.html
@@ -7,12 +7,37 @@
 
     <body>
         <h1> Pesto Garlic Cheesy Bread</h1>
+        <p><a href="../index.html">Back to home</a></p>
         <img src="https://olo-images-live.imgix.net/51/51b5ec1e510c415aa3456103d97ea288.jpg?auto=format%2Ccompress&q=60&cs=tinysrgb&w=1200&h=800&fit=fill&fm=png32&bg=transparent&s=d580ff338dd1e93ab5db390afe4e0969" alt="Pesto garlic cheeeeesy bread" height="400" width="600">
             <h2>Description</h2>
             <p>The best way to kick off a pizza <strong>FEAST</strong> is with this amazing pesto garlic cheesy bread. Normally, Blaze Pizza has this recipe under lock and key, but a secret informant worked tirelessly to bring me the recipe, and now I hand it over to you!</p>
             <h2>Ingredients</h2>
-            
-
+                <ul>
+                    <li>150g all-purpose flour</li>
+                    <li>7g instant dry yeast</li>
+                    <li>½ teaspoon fine sea salt</li>
+                    <li>1 teaspoon granulated sugar</li>
+                    <li>125g water warm <em>(about 120°F (48°C))</em></li>
+                    <li>7g olive oil</li>
+                    <li>6-8 garlic cloves <em>minced</em></li>
+                    <li>28g olive oil <em>plus more as needed</em></li>
+                    <li>65g basil pesto</li>
+                    <li>113g shredded mozzarella</li>
+                    <li>28g grated parmesan</li>
+                    <li>Italian parsley <em>optional</em></li>
+                </ul>
+            <h2>Instructions</h2>
+                <ol>
+                    <li>In a medium bowl, combine the bread flour, yeast, salt, and sugar. Add the water and oil, and mix with a spatula until a shaggy dough forms and there are no dry parts. The dough will be wet and sticky; this is normal!</li>
+                    <li>Knead on a lightly floured surface until elastic, about 4 to 6 minutes. Transfer the dough back to the mixing bowl, cover with plastic wrap, and let rest for 10 minutes.</li>
+                    <li>While the dough is resting, combine the minced garlic and olive oil in a small cup.</li>
+                    <li>Drizzle an 8 x 8-inch (20 x 20-cm) nonstick baking pan with about 1 tablespoon of oil. Turn the dough out into the pan and turn it to fully coat it in the oil. Top the dough with about one-third of the minced garlic mixture and gently spread and shape the dough into a rough square shape by pressing it down and dimpling the surface with your oiled fingers. The dough won't reach the edges of the pan at this time. Cover with plastic wrap or a kitchen towel and allow to rest for 15 minutes.</li>
+                    <li>Uncover the dough and add another third of the garlic mixture. Continue dimpling and stretching the dough out with your fingertips. It should be more than halfway to the edges by now. Cover with plastic wrap or a kitchen towel and allow to rest for 15 more minutes.</li>
+                    <li>Return to the dough and add the remaining garlic mixture. Dimple and stretch the dough, using extra oil on your hands as needed, until it reaches the edges and corners of the pan. Cover the pan and allow to rise for 1 hour. This will be the last rise required!</li>
+                    <li>Position an oven rack in the bottom third of the oven and preheat the oven to 500°F (260°C).</li>
+                    <li>Remove the plastic wrap from your dough and, if necessary, coax any dough back into the corners of the pan. Add dollops of the pesto sauce on top of the dough, and gently spread it into an even layer using the back of a spoon. Be careful not to deflate the dough too much! Sprinkle the mozzarella cheese and half of the parmesan cheese evenly on top of the pesto layer.</li>
+                    <li>Bake for 11-13 minutes, until the edges are a deep golden brown and the cheese is melted and bubbling on top. Sprinkle the remaining parmesan cheese and chopped parsley on top and allow the bread to cool in the pan for 5 minutes, then carefully remove it to a cutting board.</li>
+                </ol>
     <a href="../index.html">Back to home</a>
     </body>
 </html>
