--- a/recipes/lemon-meringue.html
+++ b/recipes/lemon-meringue.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Lemon Meringue Pie</h1>
+        <p><a href="../index.html">Back to home</a></p>
         <img src="https://www.simplyrecipes.com/thmb/UX-uVHLh-mRpj1XC0gDhMI47u30=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2016__05__lemon-meringue-pie-horiz-c-1600-d5bdab6b0b284304a8d00a5d75aa6dc4.jpg" alt="A lemon meringue baked to perfection">
             <h2>Description</h2>    
             <p>Nothing says summer like a sweet and tart lemon meringue pie! In this recipe, you'll not only find the perfect complement to any offerings made at a lemonade stand, but also a dessert you can show off to all your friends!</p>
