--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <ol>
-            <li><a href="./recipes/blaze-simple-pie.html">Blaze-Inspired Simple Pie</a> | Credit: <a href="https://sugarspunrun.com/the-best-pizza-dough-recipe/">(dough)</a> <a href="https://joyfoodsunshine.com/easy-homemade-pizza-sauce-recipe/">(sauce)</a></li>
-            <li><a href="./recipes/lemon-meringue.html">Lemon Meringue Pie:</a> | <a href="https://www.simplyrecipes.com/recipes/lemon_meringue_pie/">Credit</a></li>
-            <li><a href="./recipes/cheesy-bread.html">Pesto Garlic Cheesy Bread:</a> | <a href="https://mikebakesnyc.com/cheesy-pesto-garlic-bread/">Credit</a></li>
-        </ol>
+        <ul>
+            <li><a href="./recipes/blaze-simple-pie.html">Blaze-Inspired Simple Pie</a> | Credit: <a href="https://sugarspunrun.com/the-best-pizza-dough-recipe/" target="_blank" rel="noopener noreferrer">(dough)</a> <a href="https://joyfoodsunshine.com/easy-homemade-pizza-sauce-recipe/" target="_blank" rel="noopener noreferrer">(sauce)</a></li>
+            <li><a href="./recipes/lemon-meringue.html">Lemon Meringue Pie:</a> | <a href="https://www.simplyrecipes.com/recipes/lemon_meringue_pie/" target="_blank" rel="noopener noreferrer">Credit</a></li>
+            <li><a href="./recipes/cheesy-bread.html">Pesto Garlic Cheesy Bread:</a> | <a href="https://mikebakesnyc.com/cheesy-pesto-garlic-bread/" target="_blank" rel="noopener noreferrer">Credit</a></li>
+        </ul>
     </body>
 
 </html>
