removed superscript in simple pie instructions, and added target/rel attributes to youtube link for saucing pizza

--- a/recipes/blaze-simple-pie.html
+++ b/recipes/blaze-simple-pie.html
@@ -21,7 +21,7 @@
                     <li>¾ teaspoon salt</li>
                     <li>⅛-¼ teaspoon garlic powder and/or dried basil leaves <em>optional</em></li>
                     <li>2 Tablespoons olive oil <em>+ additional</em></li>
-                    <li>¾ cup warm water³ (175ml)</li>
+                    <li>¾ cup warm water (175ml)</li>
                     <li>6 ounces tomato paste</li>
                     <li>15 ounces tomato sauce</li>
                     <li>1-2 Tablespoons dried oregano to taste</li>
@@ -61,7 +61,7 @@
                 <h3>Now the assembly!</h3>
                     <ol>
                         <li>Scoop up two spoonfuls of sauce and pour it in the middle of the dough.</li>
-                        <li>Using the bottom of the spoon, run the spoon along the sauce in a circular motion (<a href="https://youtu.be/S1goFaPFgGc?t=91">click here for help!</a>)</li>
+                        <li>Using the bottom of the spoon, run the spoon along the sauce in a circular motion (<a href="https://youtu.be/S1goFaPFgGc?t=91" target="_blank" rel="noopener noreferrer">click here for help!</a>)</li>
                         <li>Sprinkle the parmesan evenly, and do the same for the shredded mozzarella.</li>
                         <li>Add salt and oregano as you prefer.</li>
                     </ol>
