Added basic css elements to index.html, simple pie, cheesy bread and lemon meringue pages

--- a/recipes/blaze-simple-pie.html
+++ b/recipes/blaze-simple-pie.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Simple Pie | Blaze</title>
     </head>
 
@@ -9,12 +10,12 @@
         <h1>The <em>Glorious</em> Simple Pie from Blaze Pizza</h1>
         <p><a href="../index.html">Back to home</a></p>
         <img src="https://olo-images-live.imgix.net/a1/a1f8baed6d784d26b87051bf6203161e.jpg?auto=format%2Ccompress&q=60&cs=tinysrgb&w=1200&h=800&fit=fill&fm=png32&bg=transparent&s=3e7b8b1bb07ee6c9a8a99452e1a4e1dd" alt="The simple pie!" height="500" width="800">
-            <h2>Description</h2>
-                <p>If you're like me, when asked "Where would you go to grab a bite right this very second?", there would be one restaurant that <strong>IMMEDIATELY</strong> comes to mind. For me, that would be none other than the magnificent Blaze Pizza.</p>
-                <p>It started 2 years ago, when I found myself wanting an hour a week to relax, escape the busy thoughts of the day and eat the one thing I couldn't live without: pizza. With that being said, however, not all pizzas are made the same, and that can especially be said about Blaze's perfection of a simple pie. Every Thursday since then, I have made the routine trek to this pinnacle of pie production.</p>
-                <p> Some of you may not be so lucky to have a Blaze Pizza near you, but fear not! I have the solution... a simple pie within the comforts of your own oven!</p>
+            <h2 class="Description">Description</h2>
+                <p class="DescriptionContent">If you're like me, when asked "Where would you go to grab a bite right this very second?", there would be one restaurant that <strong>IMMEDIATELY</strong> comes to mind. For me, that would be none other than the magnificent Blaze Pizza.</p>
+                <p class="DescriptionContent">It started 2 years ago, when I found myself wanting an hour a week to relax, escape the busy thoughts of the day and eat the one thing I couldn't live without: pizza. With that being said, however, not all pizzas are made the same, and that can especially be said about Blaze's perfection of a simple pie. Every Thursday since then, I have made the routine trek to this pinnacle of pie production.</p>
+                <p class="DescriptionContent"> Some of you may not be so lucky to have a Blaze Pizza near you, but fear not! I have the solution... a simple pie within the comforts of your own oven!</p>
             <h2>Ingredients</h2>
-                <ul>
+                <ul class="Ingredients">
                     <li>2-2 ⅓ cups all-purpose flour OR bread flour <em>divided (250-295g)</em></li>
                     <li>1 packet instant yeast <em>(2 ¼ teaspoon)</em></li>
                     <li>1 ½ teaspoons sugar</li>
@@ -38,8 +39,8 @@
 
                 </ul>
             <h2>Instructions</h2>
-                <h3>First step is to make the dough:</h3>
-                    <ol>
+                <h3 class="Description">First step is to make the dough:</h3>
+                    <ol class="Instructions">
                         <li>Combine 1 cup (125g) of flour, instant yeast, sugar, and salt in a large bowl. If desired, add garlic powder and dried basil at this point as well.</li>
                         <li>Add olive oil and warm water and use a wooden spoon to stir well very well.</li>
                         <li>Gradually add another 1 cup (125g) of flour. Add any additional flour as needed (I've found that sometimes I need as much as an additional ⅓ cup), stirring until the dough is forming into a cohesive, elastic ball and is beginning to pull away from the sides of the bowl (see video above recipe for visual cue). The dough will still be slightly sticky but still should be manageable with your hands.</li>
@@ -52,14 +53,14 @@
                         <li>Drizzle additional olive oil (about a Tablespoon) over the top of the pizza and use your pastry brush to brush the entire surface of the pizza (including the crust) with olive oil.</li>
                         <li>Use a fork to poke holes all over the center of the pizza to keep the dough from bubbling up in the oven.</li>
                     </ol>
-                <h3>Next, the sauce (yes, we're sticking to classic red):</h3>
-                    <ol>
+                <h3 class="Description">Next, the sauce (yes, we're sticking to classic red):</h3>
+                    <ol class="Instructions">
                         <li>Mix tomato paste and sauce together in a medium size bowl until smooth.</li>
                         <li>Add the rest of the ingredients - oregano, Italian seasoning, garlic powder, onion powder, garlic salt, pepper and sugar - and stir until evenly distributed throughout the sauce.</li>
                         <li>Taste and adjust seasonings to your liking.</li>
                     </ol>
-                <h3>Now the assembly!</h3>
-                    <ol>
+                <h3 class="Description">Now the assembly!</h3>
+                    <ol class="Instructions">
                         <li>Scoop up two spoonfuls of sauce and pour it in the middle of the dough.</li>
                         <li>Using the bottom of the spoon, run the spoon along the sauce in a circular motion (<a href="https://youtu.be/S1goFaPFgGc?t=91" target="_blank" rel="noopener noreferrer">click here for help!</a>)</li>
                         <li>Sprinkle the parmesan evenly, and do the same for the shredded mozzarella.</li>
