--- a/recipes/cheesy-bread.html
+++ b/recipes/cheesy-bread.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Pesto Garlic Cheesy Bread</title>
     </head>
 
@@ -9,10 +10,10 @@
         <h1> Pesto Garlic Cheesy Bread</h1>
         <p><a href="../index.html">Back to home</a></p>
         <img src="https://olo-images-live.imgix.net/51/51b5ec1e510c415aa3456103d97ea288.jpg?auto=format%2Ccompress&q=60&cs=tinysrgb&w=1200&h=800&fit=fill&fm=png32&bg=transparent&s=d580ff338dd1e93ab5db390afe4e0969" alt="Pesto garlic cheeeeesy bread" height="400" width="600">
-            <h2>Description</h2>
-            <p>The best way to kick off a pizza <strong>FEAST</strong> is with this amazing pesto garlic cheesy bread. Normally, Blaze Pizza has this recipe under lock and key, but a secret informant worked tirelessly to bring me the recipe, and now I hand it over to you!</p>
+            <h2 class="Description">Description</h2>
+            <p class="DescriptionContent">The best way to kick off a pizza <strong>FEAST</strong> is with this amazing pesto garlic cheesy bread. Normally, Blaze Pizza has this recipe under lock and key, but a secret informant worked tirelessly to bring me the recipe, and now I hand it over to you!</p>
             <h2>Ingredients</h2>
-                <ul>
+                <ul class="Ingredients">
                     <li>150g all-purpose flour</li>
                     <li>7g instant dry yeast</li>
                     <li>½ teaspoon fine sea salt</li>
@@ -27,7 +28,7 @@
                     <li>Italian parsley <em>optional</em></li>
                 </ul>
             <h2>Instructions</h2>
-                <ol>
+                <ol class="Instructions">
                     <li>In a medium bowl, combine the bread flour, yeast, salt, and sugar. Add the water and oil, and mix with a spatula until a shaggy dough forms and there are no dry parts. The dough will be wet and sticky; this is normal!</li>
                     <li>Knead on a lightly floured surface until elastic, about 4 to 6 minutes. Transfer the dough back to the mixing bowl, cover with plastic wrap, and let rest for 10 minutes.</li>
                     <li>While the dough is resting, combine the minced garlic and olive oil in a small cup.</li>
