--- a/recipes/lemon-meringue.html
+++ b/recipes/lemon-meringue.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Lemon Meringue Pie</title>
     </head>
 
@@ -9,11 +10,11 @@
         <h1>Lemon Meringue Pie</h1>
         <p><a href="../index.html">Back to home</a></p>
         <img src="https://www.simplyrecipes.com/thmb/UX-uVHLh-mRpj1XC0gDhMI47u30=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2016__05__lemon-meringue-pie-horiz-c-1600-d5bdab6b0b284304a8d00a5d75aa6dc4.jpg" alt="A lemon meringue baked to perfection">
-            <h2>Description</h2>    
-            <p>Nothing says summer like a sweet and tart lemon meringue pie! In this recipe, you'll not only find the perfect complement to any offerings made at a lemonade stand, but also a dessert you can show off to all your friends!</p>
+            <h2 class="Description">Description</h2>    
+            <p class="DescriptionContent">Nothing says summer like a sweet and tart lemon meringue pie! In this recipe, you'll not only find the perfect complement to any offerings made at a lemonade stand, but also a dessert you can show off to all your friends!</p>
             
             <h2>Ingredients</h2>
-                <ul>
+                <ul class="Ingredients">
                     <li>1 (9-inch) frozen pie crust (or you can use any homemade recipe)</li>
                     <li>5 large egg yolks</li>
                     <li>6 tablespoons cornstarch</li>
@@ -31,24 +32,24 @@
                     <li>½ teaspoon vanilla extract</li>
                 </ul>
             <h2>Instructions</h2>
-                <h3>Pre-bake the pie shell</h3>
-                    <ol>
+                <h3 class="Description">Pre-bake the pie shell</h3>
+                    <ol class="Instructions">
                         <li>Preheat the oven to 375°F.</li>
                         <li>If you are using a packaged frozen pie crust, follow the directions on the package to pre-bake. If you are using a homemade crust, follow these instructions:</li>
                         <li>Line your frozen pie shell with aluminum foil so that the foil extends over the edges (will make convenient handles). Fill two-thirds of the way with pie weights or dry beans.</li>
                         <li>Bake for 20 minutes. Then remove the foil and the pie weights. Poke the bottom of the crust in several places with the tines of a fork. This will help prevent the bottom from bubbling up.</li>
                         <li>Put the crust back in the oven and bake for 15 minutes more, or until the crust is lightly browned. Remove from oven and set aside.</li>
                     </ol>
-                <h3>Make the lemon filling:</h3>
-                    <ol>
+                <h3 class="Description">Make the lemon filling:</h3>
+                    <ol class="Instructions">
                         <li>Whisk the egg yolks in a medium bowl and set aside.</li>
                         <li>In a medium saucepan, add 6 tablespoons cornstarch, 1 ⅓ cup sugar, ¼ teaspoon salt, and 1 ½ cups water, and whisk to combine. Bring to a boil on medium heat, whisking constantly. Let simmer for a minute or two until the mixture begins to thicken.</li>
                         <li>Once the cornstarch mixture has thickened up well (consistency of Cream of Wheat) remove from heat. Take a spoonful of the cornstarch mixture and whisk it into the beaten egg yolks to temper the yolks. Continue to whisk in spoonfuls of the cornstarch mixture until you've used about half of the cornstarch mixture.</li>
                         <li>Then add the egg yolk mixture back to the pot with the cornstarch. Return to a boil, on medium to medium high heat, stirring constantly. Cook 3 to 4 minutes. (The starch will keep the eggs from curdling.)</li>
                         <li>Remove from heat and stir in the lemon juice, lemon zest, and butter.</li></>
                     </ol>
-                <h3>Make the meringue:</h3>
-                    <ol>
+                <h3 class="Description">Make the meringue:</h3>
+                    <ol class="Instructions">
                         <li>Turn the oven temperature down to 325°F.</li>
                         <li>In a small saucepan, whisk together 1 tablespoon cornstarch and 1/3 cup of cold water until the cornstarch dissolves. Heat on medium heat and whisk until the mixture bubbles and thickens. Remove from heat and set aside.</li>
                         <li>Whisk together 1/2 cup plus 2 tablespoons of sugar and 1/4 teaspoon of cream of tartar, set aside. (If you do not have cream of tartar, instead add a teaspoon of white vinegar to the egg whites with the vanilla in the next step.)</li>
@@ -57,8 +58,8 @@
                         <li>Add the cornstarch water mixture (it should look like a gel) a spoonful at a time, as you continue to beat the egg whites. Increase the speed to high and continue to beat until the egg whites have formed stiff peaks. Do not over-beat, or your meringue will be grainy.</li>
                     </ol>
                     
-                <h3>Putting it all together</h3>
-                    <ol>
+                <h3 class="Description">Putting it all together</h3>
+                    <ol class="Instructions">
                         <li>Heat the lemon filling again, until it is bubbling hot. It's important that the filling is very hot in order for the meringue to properly adhere.</li>
                         <li>Scoop the steaming hot filling into the pre-baked pie shell, spreading it evenly.</li>
                         <li>Working quickly, use a rubber spatula to spread the meringue mixture evenly around the edge of the pie.</li>
